# nekoni

./: .env.example  .gitignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PRIVACY.md  README.md  SECURITY.md  agents.md  amplify.yml  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_tool.md
apps/agent/: Dockerfile  pyproject.toml
apps/agent/src/nekoni_agent/: config.py  main.py
apps/agent/src/nekoni_agent/agent/: context.py  history.py  loop.py
apps/agent/src/nekoni_agent/api/: auth.py  routes.py  ws.py
apps/agent/src/nekoni_agent/crypto/: keys.py  verify.py
apps/agent/src/nekoni_agent/llm/: client.py  prompts.py
apps/agent/src/nekoni_agent/memory/: long.py  short.py
apps/agent/src/nekoni_agent/rag/: embedder.py  pipeline.py  store.py
apps/agent/src/nekoni_agent/settings/: models.py
apps/agent/src/nekoni_agent/skills/: models.py  runner.py  scheduler.py
apps/agent/src/nekoni_agent/tools/: base.py  registry.py
apps/agent/src/nekoni_agent/tools/builtin/: get_time.py  rag_query.py  web_search.py
apps/agent/src/nekoni_agent/webrtc/: channel.py  peer.py
apps/dashboard/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
apps/mobile/: app.json  metro.config.js  package.json
docs/: api.md  architecture.md  config.md  development.md  mobile.md  security.md  setup.md  web.md
scripts/: dev.sh  gen_cert.py  run_agent.py  setup.sh
(+72 files in other folders)
