[project]
name = "nekoni-agent"
version = "0.1.0"
description = "Nekoni AI Agent - Local AI with P2P mobile interface"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "aiortc>=1.9.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "cryptography>=42.0.0",
    "qrcode[pil]>=7.4.2",
    "apscheduler>=3.10.4",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nekoni_agent"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I"]
